[gd_scene load_steps=17 format=3 uid="uid://l88mxxcijf8v"]

[ext_resource type="Script" uid="uid://bre3hdpkifhff" path="res://addons/commando/plugin/window/local_variable_window/cmd_local_variable_window.gd" id="1_rkttb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kkneb"]
bg_color = Color(0.211765, 0.239216, 0.290196, 1)

[sub_resource type="Image" id="Image_dibur"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 111, 145, 240, 255, 111, 145, 240, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 111, 145, 240, 255, 111, 145, 240, 255, 0, 0, 0, 0, 111, 145, 240, 255, 111, 145, 240, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 111, 145, 240, 255, 111, 145, 240, 255, 0, 0, 0, 0, 111, 145, 240, 255, 111, 145, 240, 255, 110, 145, 240, 224, 111, 144, 240, 129, 128, 128, 255, 4, 110, 145, 241, 137, 110, 145, 240, 233, 111, 144, 240, 230, 111, 144, 240, 131, 111, 144, 241, 140, 110, 145, 240, 233, 111, 144, 240, 232, 110, 145, 241, 137, 111, 145, 240, 255, 111, 145, 240, 255, 0, 0, 0, 0, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 110, 145, 240, 224, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 0, 0, 0, 0, 111, 145, 240, 255, 111, 145, 240, 255, 110, 145, 240, 65, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 109, 146, 243, 61, 110, 145, 240, 65, 111, 145, 240, 255, 111, 145, 240, 255, 111, 144, 243, 62, 110, 145, 240, 65, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 0, 0, 0, 0, 111, 145, 240, 255, 111, 145, 240, 255, 110, 145, 240, 67, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 109, 146, 243, 63, 110, 145, 240, 67, 111, 145, 240, 255, 111, 145, 240, 255, 109, 146, 243, 63, 110, 145, 240, 67, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 112, 143, 241, 73, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 144, 240, 221, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 145, 240, 255, 111, 144, 240, 221, 111, 145, 240, 255, 110, 145, 240, 254, 111, 145, 240, 255, 111, 145, 240, 255, 110, 145, 241, 222, 111, 144, 241, 126, 85, 170, 255, 3, 110, 145, 240, 132, 111, 144, 240, 228, 110, 145, 240, 225, 110, 145, 241, 127, 111, 144, 240, 129, 110, 145, 240, 227, 111, 144, 240, 228, 110, 145, 240, 130, 85, 170, 255, 3, 110, 146, 240, 128, 111, 144, 240, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_rkttb"]
image = SubResource("Image_dibur")

[sub_resource type="Image" id="Image_4ff08"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 90, 187, 239, 255, 89, 187, 239, 231, 89, 187, 238, 135, 102, 204, 255, 5, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 90, 187, 239, 255, 90, 187, 239, 255, 90, 187, 239, 255, 89, 187, 240, 134, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 91, 189, 241, 73, 90, 187, 239, 255, 89, 187, 239, 229, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 90, 186, 239, 230, 90, 187, 239, 255, 91, 189, 241, 73, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 89, 187, 238, 135, 90, 187, 239, 255, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 90, 187, 239, 255, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 102, 204, 255, 5, 89, 187, 240, 134, 89, 187, 239, 229, 90, 187, 239, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_6bv35"]
image = SubResource("Image_4ff08")

[sub_resource type="Image" id="Image_j70mu"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 42, 213, 255, 6, 52, 213, 244, 137, 53, 212, 244, 231, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 52, 213, 244, 137, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 231, 53, 212, 244, 255, 53, 213, 245, 72, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 52, 212, 244, 230, 53, 212, 244, 255, 52, 213, 245, 73, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 52, 212, 244, 230, 53, 212, 244, 255, 52, 213, 245, 73, 0, 0, 0, 0, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 135, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 53, 212, 244, 135, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 51, 204, 255, 5, 51, 212, 244, 134, 52, 212, 244, 229, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 51, 204, 255, 5, 51, 212, 244, 134, 52, 212, 244, 229, 53, 212, 244, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_v4rr4"]
image = SubResource("Image_j70mu")

[sub_resource type="Image" id="Image_l3kxw"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 69, 146, 236, 103, 69, 147, 236, 222, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 68, 146, 237, 56, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 67, 147, 237, 113, 69, 147, 236, 255, 69, 147, 236, 170, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 42, 170, 255, 6, 69, 147, 237, 137, 68, 147, 236, 231, 0, 0, 0, 0, 0, 0, 0, 0, 68, 146, 237, 56, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 222, 68, 147, 238, 101, 0, 0, 0, 0, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 69, 147, 237, 137, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 68, 147, 238, 101, 68, 146, 236, 220, 69, 147, 236, 255, 69, 147, 236, 255, 67, 149, 236, 53, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 68, 147, 236, 231, 69, 147, 236, 255, 67, 145, 238, 72, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 68, 147, 236, 175, 69, 147, 236, 255, 68, 147, 237, 109, 0, 0, 0, 0, 69, 146, 235, 230, 69, 147, 236, 255, 66, 147, 238, 73, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 68, 147, 236, 254, 68, 147, 236, 52, 0, 0, 0, 0, 68, 147, 237, 135, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 68, 146, 236, 220, 67, 146, 237, 98, 0, 0, 0, 0, 0, 0, 0, 0, 51, 153, 255, 5, 68, 147, 236, 134, 68, 147, 236, 229, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_1gtt3"]
image = SubResource("Image_l3kxw")

[sub_resource type="Image" id="Image_vvp57"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 69, 146, 236, 103, 69, 147, 236, 222, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 143, 190, 243, 255, 143, 190, 243, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 68, 146, 237, 56, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 143, 190, 243, 255, 143, 190, 243, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 67, 147, 237, 113, 69, 147, 236, 255, 69, 147, 236, 170, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 143, 190, 243, 255, 143, 190, 243, 255, 143, 190, 243, 255, 143, 190, 243, 255, 69, 147, 236, 255, 69, 147, 236, 255, 68, 146, 236, 232, 68, 146, 236, 169, 70, 150, 238, 29, 0, 0, 0, 0, 68, 146, 237, 56, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 222, 68, 147, 238, 101, 0, 0, 0, 0, 143, 190, 243, 255, 143, 190, 243, 255, 143, 190, 243, 255, 143, 190, 243, 255, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 68, 147, 236, 238, 70, 150, 238, 29, 0, 0, 0, 0, 68, 147, 238, 101, 68, 146, 236, 220, 69, 147, 236, 255, 69, 147, 236, 255, 67, 149, 236, 53, 143, 190, 243, 255, 143, 190, 243, 255, 0, 0, 0, 0, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 64, 146, 237, 28, 68, 147, 236, 182, 69, 147, 236, 255, 68, 147, 236, 167, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 68, 147, 236, 175, 69, 147, 236, 255, 68, 147, 237, 109, 140, 188, 243, 239, 143, 190, 243, 255, 123, 181, 244, 93, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 64, 146, 237, 28, 69, 147, 236, 255, 69, 146, 235, 230, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 68, 147, 236, 254, 68, 147, 236, 52, 131, 184, 243, 160, 143, 190, 243, 255, 143, 190, 243, 255, 143, 190, 243, 255, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 69, 147, 236, 255, 68, 146, 236, 220, 67, 146, 237, 98, 0, 0, 0, 0, 85, 170, 255, 6, 130, 183, 243, 159, 139, 189, 244, 238, 143, 190, 243, 255, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 69, 147, 236, 255, 69, 147, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_byee3"]
image = SubResource("Image_vvp57")

[sub_resource type="Image" id="Image_51duh"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 0, 0, 1, 255, 119, 107, 131, 255, 119, 107, 222, 255, 120, 107, 255, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 85, 170, 255, 6, 95, 177, 255, 137, 95, 178, 255, 231, 95, 178, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 255, 120, 106, 132, 255, 120, 107, 255, 255, 120, 107, 255, 255, 120, 107, 255, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 95, 177, 255, 137, 95, 178, 255, 255, 95, 178, 255, 255, 95, 178, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 255, 120, 107, 224, 255, 120, 107, 255, 255, 121, 104, 61, 0, 0, 0, 0, 0, 0, 0, 0, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 95, 178, 255, 231, 95, 178, 255, 255, 96, 177, 255, 72, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 120, 106, 223, 255, 120, 107, 255, 255, 121, 105, 63, 0, 0, 0, 0, 0, 0, 0, 0, 114, 242, 128, 230, 115, 242, 128, 255, 115, 241, 129, 73, 0, 0, 0, 0, 0, 0, 0, 0, 95, 178, 255, 255, 95, 178, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 120, 106, 132, 255, 120, 107, 255, 255, 120, 107, 255, 255, 120, 107, 255, 0, 0, 0, 0, 115, 242, 128, 135, 115, 242, 128, 255, 115, 242, 128, 255, 115, 242, 128, 255, 0, 0, 0, 0, 95, 178, 255, 255, 95, 178, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 0, 0, 1, 255, 119, 107, 129, 255, 119, 107, 220, 255, 120, 107, 255, 0, 0, 0, 0, 102, 255, 153, 5, 114, 242, 128, 134, 115, 242, 128, 229, 115, 242, 128, 255, 0, 0, 0, 0, 95, 178, 255, 255, 95, 178, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_105p0"]
image = SubResource("Image_51duh")

[sub_resource type="Image" id="Image_vtwlr"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 64, 122, 236, 222, 64, 121, 236, 131, 0, 0, 255, 1, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 65, 122, 236, 255, 64, 121, 236, 254, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 64, 122, 236, 130, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 65, 122, 236, 255, 65, 121, 236, 252, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 63, 122, 236, 65, 65, 122, 236, 255, 65, 122, 236, 220, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 64, 121, 236, 231, 64, 121, 237, 135, 51, 102, 255, 5, 65, 122, 236, 255, 65, 122, 236, 255, 64, 120, 237, 68, 65, 122, 236, 255, 64, 121, 236, 219, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 64, 122, 236, 134, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 64, 122, 237, 127, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 63, 122, 238, 73, 65, 122, 236, 255, 64, 121, 236, 229, 65, 122, 236, 255, 65, 122, 236, 255, 64, 121, 236, 221, 64, 122, 237, 127, 0, 0, 0, 0, 0, 0, 0, 0, 64, 122, 235, 230, 65, 122, 236, 255, 63, 122, 238, 73, 0, 0, 0, 0, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 121, 237, 135, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 65, 122, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 51, 102, 255, 5, 64, 122, 236, 134, 64, 121, 236, 229, 65, 122, 236, 255, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 0, 0, 0, 0, 65, 122, 236, 255, 65, 122, 236, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_pfpsb"]
image = SubResource("Image_vtwlr")

[node name="CmdLocalVariableWindow" type="Window"]
title = "Add Local Event Variable"
position = Vector2i(0, 36)
size = Vector2i(400, 160)
script = ExtResource("1_rkttb")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kkneb")

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Adding New Local Event Variable..."
horizontal_alignment = 1

[node name="LocalEventVariableProperty" type="HBoxContainer" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="PropertyContainer" type="HBoxContainer" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/LocalEventVariableProperty"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="NameEdit" type="LineEdit" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/LocalEventVariableProperty/PropertyContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "variable name"

[node name="ChangeTypeButton" type="OptionButton" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/LocalEventVariableProperty"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 7
popup/item_0/text = "bool"
popup/item_0/icon = SubResource("ImageTexture_rkttb")
popup/item_0/id = 1
popup/item_1/text = "int"
popup/item_1/icon = SubResource("ImageTexture_6bv35")
popup/item_1/id = 2
popup/item_2/text = "float"
popup/item_2/icon = SubResource("ImageTexture_v4rr4")
popup/item_2/id = 3
popup/item_3/text = "String"
popup/item_3/icon = SubResource("ImageTexture_1gtt3")
popup/item_3/id = 4
popup/item_4/text = "StringName"
popup/item_4/icon = SubResource("ImageTexture_byee3")
popup/item_4/id = 21
popup/item_5/text = "Color"
popup/item_5/icon = SubResource("ImageTexture_105p0")
popup/item_5/id = 20
popup/item_6/text = "NodePath"
popup/item_6/icon = SubResource("ImageTexture_pfpsb")
popup/item_6/id = 22

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="OkButton" type="Button" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "OK"

[node name="CancelButton" type="Button" parent="ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Cancel"
